<resources translatable="false">
    <string name="app_name">Restaurant Finder</string>
    <string name="fast_food">Fast Food</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="restaurant">Restaurant</string>
    <string name="setting">Setting</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="romantic_restaurant">Romantic Restaurant</string>
    <string name="work_restaurant">Work Restaurant</string>
    <string name="family_restaurant1">Family Restaurant</string>
    <string name="see_more_details">See More Details</string>
    <string name="show_favorite_list">Show Favorite List</string>
    <string name="five_guys">Five Guys</string>
    <string name="fast_food_name">Fast Food Name:</string>
    <string name="tel">TEL:</string>
    <string name="_4502380378">4502380378</string>
    <string name="_600_rue_lucien_paiement_suite_120_laval_quebec_h7n_0a5">600 Rue Lucien-Paiement Suite 120, Laval, Quebec H7N 0A5</string>
    <string name="address">Address:</string>
    <string name="site">Site:</string>
    <string name="open_in_browser">Open in Browser</string>
    <string name="rate_your_rate">Rate | Your Rate:</string>
    <string name="environment">Environment:</string>
    <string name="family_romantic">Family , Romantic</string>
    <string name="submit_rate">Submit Rate</string>
    <string name="_4_5">4/5</string>
    <string name="mcdonald_s">McDonald\'s</string>
    <string name="_5_5">5/5</string>
    <string name="shanghai_grill">ShangHai Grill</string>
    <string name="_3_5">3/5</string>
    <string name="_2_5">2/5</string>
    <string name="caf_cantina">Café Cantina</string>
    <string name="_1_5">1/5</string>
    <string name="pizza_pizza">Pizza Pizza</string>
    <string name="basilico_pizza_and_pasta">Basilico Pizza and Pasta</string>
    <string name="restaurant_beba">Restaurant Beba</string>
    <string name="restaurant_pigor">Restaurant Pigor</string>
    <string name="address_mcdonald">3026 Notre-Dame St W, Montreal, Quebec H4C 1P1</string>
    <string name="tel_mcdonald">5148463766</string>
    <string name="address_shanghai">4050 Sainte-Catherine O, Montréal, QC H3Z 1P2</string>
    <string name="tel_shanghai">5149359478</string>
    <string name="address_lasocca">278 Rue Elgar, Verdun, QC H3E 1C9</string>
    <string name="tel_lasocca">5147662824</string>
    <string name="address_cafecantina">1880 Centre St, Montreal, Quebec H3K 1H9</string>
    <string name="tel_cafecantina">5149033511</string>
    <string name="address_pizzapizza">1880 Centre St, Montreal, Quebec H3K 1H9</string>
    <string name="tel_pizzapizza">5147371111</string>
    <string name="address_pizzapasta">7 Pl. du Commerce Unit 104, Verdun, Quebec H3E 2B5</string>
    <string name="tel_pizzapasta">5147667777</string>
    <string name="address_beba">3900 Rue Éthel, Verdun, QC H4G 1S4</string>
    <string name="tel_beba">5147507087</string>
    <string name="address_pigor">3780 Wellington St, Verdun, Quebec H4G 1V2</string>
    <string name="tel_pigor"> 5149070816</string>
    <string name="family_work">Family , Work</string>
    <string name="romantic_work">Romantic , Work</string>
    <string name="la_soca">La Socca</string>
    <string name="clear_favorite_list">Clear Favorite List</string>
    <string name="add_restaurant">Add Restaurant</string>
    <string name="add_fastfood">Add Fast Food</string>
    <string name="about">About</string>
    <string name="this_program_was_created_by_ali_rezaei_and_is_to_help_you_find_restaurants_and_fast_foods_more_easily_i_hope_this_program_has_helped_you_ali_rezaei">This program was created by Ali Rezaei and is to help you find restaurants and fast foods more easily. I hope this program has helped you.\n Ali Rezaei</string>
    <string name="rate_app">Rate App</string>
</resources>
